Fix placeholder image issues and improve Project Resources page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MIT ADT PBL - Project-Based Learning Platform</title>
-    <meta name="description" content="Experience hands-on learning through innovative Project-Based Learning methodology at MIT Academy of Engineering." />
+    <meta name="description" content="Experience hands-on learning through innovative Project-Based Learning methodology at MIT ADT University Loni Kalbhor." />
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
